2001-11-12  Philippe Elie  <ph_e@club-internet.fr>

	* util: new directory
	* util/string_manip.cpp:
	* util/string_manip.h: new
	* Makefile.in: handle util directory
	* pp/Makefile.in:
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* gui/Makefile.in:
	* gui/oprof_start_util.cpp:
	* gui/oprof_start_util.h: update to use string_manip.cpp

	* op_events.c:
	* op_user.h:
	* pp/opf_filter.h:
	* pp/opf_filter.cpp:
	* pp/opf_container.cpp: remove dead code

2001-11-11  Dave Jones <davej@suse.de>

	* module/oprofile.[c|h]: Change MSR defines from
	  MSR_IA32_xxx from MSR_P6_xxx, based on info on
	  Linux kernel from Mikael Pettersson that these MSRs
	  don't exist on Pentium 4.

2001-11-11  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start.cpp: fix record_config()

	* op_user.h: fix one comment

2001-11-10  Bob Montgomery  <bob_montgomery@hp.com>

	* module/oprofile.c: fix pid/pgrp filter to reset counter 

2001-11-08  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* configure.in: bump to 0.0.8cvs
 
2001-11-07  John Levon  <moz@compsoc.man.ac.uk>

	* acinclude.m4:
	* configure.in: fixes for configuration when Qt2 not found

	* child_reader.h:
	* child_reader.cpp: compile with gcc 3.0
 
2001-11-07  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.0.7
 
2001-11-07  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in:
	* module/oprofile.h:
	* module/oprofile.c: fail if hard_get_current() exists
	  - this won't work
 
2001-11-06  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in: reformat options
	* doc/oprofile.sgml: clarify options that require argument.
	  Document short option

	* gui/oprof_start_util.cpp: fix basename()

	* pp/oprofpp.cpp:
	* pp/oprofpp.h:
	* pp/opf_filter.cpp: better options handling

	* module/oprofile.c: update one comment

	* TODO: update

2001-11-06  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in:
	* module/oprofile.h:
	* module/oprofile.c: support for hard_get_current()
 